# user-items

./: .env  Cargo.toml  README.md
crates/api-service/: .env  Cargo.toml
crates/api-service/src/: app.rs  config.rs  main.rs  state.rs
crates/api-service/src/domain/: user_service.rs
crates/api-service/src/handlers/: create_user.rs
crates/api-service/src/producer/: kafka_producer.rs
crates/api-service/src/routes/: user_routes.rs
crates/cassandra-consumer/: Cargo.toml
crates/cassandra-consumer/src/: .env  config.rs  main.rs
crates/cassandra-consumer/src/cassandra/: repository.rs
crates/cassandra-consumer/src/consumer/: kafka_consumer.rs
crates/cassandra-consumer/src/processor/: user_processor.rs
crates/common/: Cargo.toml
crates/common/src/: envelope.rs  errors.rs  lib.rs  types.rs  version.rs
crates/common/src/events/: mod.rs  user_created.rs  user_updated.rs
crates/redis-consumer/: Cargo.toml
crates/redis-consumer/src/: .env  config.rs  main.rs
crates/redis-consumer/src/processor/: mod.rs  user_processor.rs
crates/redis-consumer/src/redis/: client.rs
