[package]
name = "api-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
envy = "0.4"
rdkafka = { version = "0.36", default-features = false, features = ["cmake-build", "tokio"] }

common = { path = "../common" }