[package]
name = "cassandra-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdkafka = { version = "0.36", default-features = false, features = ["cmake-build", "tokio"] }
scylla = "0.12"
envy = "0.4"
dotenvy = "0.15"

common = { path = "../common" }
tokio-stream = "0.1.18"
